UPD with class toggling
UPD with class toggling

--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
 							<div>
 								<!-- Nav tabs -->
 								<ul class="nav nav-tabs items-center" role="tablist">
-									<li class="active"><a href="#tabRight1" role="tab" data-toggle="tab">tab1</a></li>
-									<li><a href="#tabRight2" role="tab" data-toggle="tab">tab2</a></li>
-									<li><a href="#tabRight3" role="tab" data-toggle="tab">tab3</a></li>
-									<li><a href="#tabRight4" role="tab" data-toggle="tab">tab4</a></li>
+									<li class="active"><a href="#" data-target=".tabRight1" role="tab" data-toggle="tab">tab1</a></li>
+									<li><a href="#" data-target=".tabRight2" role="tab" data-toggle="tab">tab2</a></li>
+									<li><a href="#" data-target=".tabRight3" role="tab" data-toggle="tab">tab3</a></li>
+									<li><a href="#" data-target=".tabRight4" role="tab" data-toggle="tab">tab4</a></li>
 								</ul>
 								<!-- Nav tabs  END-->
 							</div>
@@ -170,7 +170,7 @@
 						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 							<!-- Nav content -->
 							<div class="tab-content">
-								<div role="tabpanel" class="tab-pane active" id="tabRight1">
+								<div role="tabpanel" class="tab-pane active tabRight1">
 									<div class="row">
 										<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 											<div class="border + height">
@@ -193,7 +193,7 @@
 										</div>
 									</div>
 								</div>
-								<div role="tabpanel" class="tab-pane" id="tabRight2">
+								<div role="tabpanel" class="tab-pane tabRight2">
 									<div class="row">
 										<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 											<div class="border + height">
@@ -216,7 +216,7 @@
 										</div>
 									</div>
 								</div>
-								<div role="tabpanel" class="tab-pane" id="tabRight3">
+								<div role="tabpanel" class="tab-pane tabRight3">
 									<div class="row">
 										<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 											<div class="border + height">
@@ -239,7 +239,7 @@
 										</div>
 									</div>
 								</div>
-								<div role="tabpanel" class="tab-pane" id="tabRight4">
+								<div role="tabpanel" class="tab-pane tabRight4">
 									<div class="row">
 										<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 											<div class="border + height">
